--- a/index.html
+++ b/index.html
@@ -4,70 +4,318 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>E-com</title>
+    <title>Ultra-Interactive Navbar</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
       .inter-font {
         font-family: "Inter", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 700;
-        font-style: normal;
+      }
+      .bg-gradient-animate {
+        background: linear-gradient(90deg, #ff7a18, #af002d, #319197, #ff7a18);
+        background-size: 300% 300%;
+        animation: gradient-flow 5s infinite;
+      }
+      @keyframes gradient-flow {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+      .hover-neon {
+        position: relative;
+        transition: color 0.3s, transform 0.3s ease;
+      }
+      .hover-neon:hover {
+        color: #fc6320;
+        transform: scale(1.1);
+      }
+      .hover-neon::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 0;
+        height: 2px;
+        background: linear-gradient(to right, #ff7a18, #af002d);
+        transition: all 0.5s ease;
+      }
+      .hover-neon:hover::after {
+        width: 100%;
+        left: 0;
+      }
+      .logo-hover:hover {
+        transform: scale(1.1) rotate(-3deg);
+        transition: transform 0.3s ease-in-out;
+      }
+      .pressable:hover {
+        transform: translateY(3px);
+        transition: transform 0.2s ease-in-out;
+      }
+      .dropdown-slide {
+        animation: slide-down 0.3s ease-in-out;
+      }
+      @keyframes slide-down {
+        from {
+          opacity: 0;
+          transform: translateY(-10%);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* Fancy hover effects for social icons */
+      .social-icon:hover {
+        transform: scale(1.2);
+        background-color: rgba(255, 255, 255, 0.2);
+        transition: all 0.3s ease;
+      }
+
+      /* Fancy button hover animation */
+      .btn-hover:hover {
+        background-color: #fc6320;
+        transform: translateY(-3px);
+        transition: all 0.3s ease;
+      }
+
+      /* Mobile Dropdown Animations */
+      .dropdown-slide {
+        animation: slide-down 0.3s ease-in-out;
+      }
+
+      /* Hover Effects for Cards */
+      .card {
+        transition: transform 0.3s, box-shadow 0.3s ease-in-out;
+      }
+      .card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      }
+
+      /* Product Card Spacing and Layout */
+      .card-image {
+        transition: transform 0.3s ease;
+      }
+      .card:hover .card-image {
+        transform: scale(1.05);
       }
     </style>
   </head>
-  <body class="inter-font px-3">
+  <body class="inter-font bg-gradient-to-br from-gray-900 via-gray-800 to-gray-700 text-white">
     <!-- Navbar -->
-    <div class="max-w-7xl mt-3 md:mt-7 lg:m-5 mx-auto">
-      <nav class="flex justify-between items-center">
-        <!-- logo -->
-        <div class="logo flex items-center">
-          <h1 class="text-3xl"><span class="text-[#FC6320]">e</span>Com</h1>
-          <img src="./logo.png" alt="" />
+    <header
+      id="navbar"
+      class="fixed top-0 left-0 w-full z-50 bg-gradient-animate shadow-lg transition-all duration-300"
+    >
+      <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center py-4">
+        <!-- Logo -->
+        <div class="flex items-center space-x-2 h-12">
+          <h1 class="text-3xl font-bold text-white logo-hover">
+            <span class="text-[#fc6320]">e</span>Com
+          </h1>
+          <img src="./logo.png" alt="Logo" class="w-10 h-10 rounded-full" />
         </div>
-        <div class="hamburger-icon md:hidden">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="size-6"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-            />
+
+        <!-- Menu Items -->
+        <div class="hidden md:flex items-center space-x-6 h-12">
+          <a href="#" class="hover-neon text-lg font-medium">Home</a>
+          <a href="#" class="hover-neon text-lg font-medium">Shop</a>
+          <a href="#" class="hover-neon text-lg font-medium">Add Products</a>
+          <a href="#" class="hover-neon text-lg font-medium">Contact</a>
+        </div>
+
+        <!-- Social Media Icons -->
+        <div class="hidden md:flex items-center space-x-4 h-12">
+          <a href="#" class="flex items-center justify-center h-12 w-12 bg-gray-700/30 hover:bg-gray-600/50 rounded-full shadow-md pressable social-icon">
+            <img src="./fb.png" alt="Facebook" class="w-6 h-6" />
+          </a>
+          <a href="#" class="flex items-center justify-center h-12 w-12 bg-gray-700/30 hover:bg-gray-600/50 rounded-full shadow-md pressable social-icon">
+            <img src="./ig.png" alt="Instagram" class="w-6 h-6" />
+          </a>
+          <a href="#" class="flex items-center justify-center h-12 w-12 bg-gray-700/30 hover:bg-gray-600/50 rounded-full shadow-md pressable social-icon">
+            <img src="./x.png" alt="Twitter" class="w-6 h-6" />
+          </a>
+        </div>
+
+        <!-- Hamburger Menu -->
+        <button id="hamburger" class="md:hidden flex items-center text-white focus:outline-none h-12">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
-        </div>
-        <!-- menu -->
-        <div class="menuItems hidden md:block">
-          <ul class="flex gap-5">
-            <li
-              class="bg-[#FC63202] border border-rounde-lgd border-[#FC632026] text-[#FC6320]"
-            >
-              Home
-            </li>
-            <li>Shop</li>
-            <li>Add Products</li>
-            <li>Contact</li>
-          </ul>
-        </div>
-        <!-- social media -->
-        <div class="social-media hidden md:block">
-          <ul class="flex gap-5">
-            <li>
-              <a href="#"><img src="./fb.png" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="./ig.png" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="./x.png" alt="" /></a>
-            </li>
-          </ul>
-        </div>
+        </button>
       </nav>
-    </div>
+
+      <!-- Mobile Dropdown -->
+      <div id="dropdown" class="hidden bg-gray-800">
+        <ul class="space-y-4 px-6 py-4 text-lg">
+          <li class="hover-neon"><a href="#">Home</a></li>
+          <li class="hover-neon"><a href="#">Shop</a></li>
+          <li class="hover-neon"><a href="#">Add Products</a></li>
+          <li class="hover-neon"><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- Main Section -->
+    <main class="pt-24 bg-gray-900">
+      <div class="max-w-7xl mx-auto px-4 text-center">
+        <h2 class="text-4xl font-bold text-orange-400 drop-shadow-lg">Exclusive Products</h2>
+        <p class="mt-4 text-gray-300">Discover our top-quality products crafted to meet your needs.</p>
+      </div>
+
+      <!-- Product Cards (9 Cards) -->
+      <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-4 mt-10">
+        <!-- Product Card Template -->
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 1" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 1</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$20.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Repeat the Product Card for more products -->
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 2" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 2</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$25.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 2" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 2</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$25.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 2" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 2</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$25.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 2" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 2</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$25.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gray-800 text-white rounded-lg shadow-lg overflow-hidden p-4 hover:shadow-xl transition-all">
+          <div class="relative w-full h-40 mb-4">
+            <img src="https://via.placeholder.com/300x200" alt="Product 2" class="w-full h-full object-cover rounded-lg card-image">
+          </div>
+          <div class="mt-4">
+            <h3 class="text-xl font-semibold">Product 2</h3>
+            <p class="text-gray-400 mt-2 text-sm">A brief description of the product goes here. Perfect for any need!</p>
+            <div class="flex items-center justify-between mt-3">
+              <p class="text-orange-400 font-bold text-lg">$25.00</p>
+              <div class="flex items-center space-x-2">
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">-</button>
+                <span class="text-white">1</span>
+                <button class="px-3 py-1 bg-gray-700 text-gray-300 hover:bg-gray-600 rounded">+</button>
+              </div>
+            </div>
+            <!-- Buy Now and Add to Cart Buttons -->
+            <div class="mt-4 ">
+              <button class="w-full py-2 bg-[#fc6320] text-white font-bold rounded-md hover:bg-[#f57223] btn-hover">Add to Cart</button>
+              <button class="w-full py-2 bg-gray-700 text-white font-bold rounded-md hover:bg-gray-600 btn-hover">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- More Product Cards can be added here in a similar structure -->
+      </div>
+    </main>
+
+    <script>
+      // Toggle Hamburger Menu
+      document.getElementById("hamburger").addEventListener("click", () => {
+        document.getElementById("dropdown").classList.toggle("hidden");
+      });
+    </script>
   </body>
 </html>
